# teracli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: main.rs
testfiles/: params.json  test.txt  test2.txt
