[package]
name = "teracli"
version = "0.1.0"
authors = ["ito <ito@intercom.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1.6.0"
serde_json = "1.0"
anyhow = "1.0.36"
clap = { version = "3.2", features = [ "cargo" ] }